fix: balloon css not to wrap

--- a/web/src/components/GatherArea.css
+++ b/web/src/components/GatherArea.css
@@ -38,6 +38,7 @@
   padding: 3px 6px;
   font-size: 0.5rem;
   text-align: center;
+  white-space: nowrap;
 }
 
 .GatherArea-facelist {
